feat(tmux): set default mouse mode on && copy mode to vi

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,15 @@ unbind h
 bind k kill-pane
 bind h split-window -h
 bind v split-window -v
+# mouse mode
+set -g mouse on
+bind m set -g mouse on \; display "Mouse: On"
+bind M set -g mouse off \; display "Mouse: Off"
+
+# copy mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind r source-file ~/.tmux.conf \; display "config file loaded."
 
