--- a/tmux.conf
+++ b/tmux.conf
@@ -21,14 +21,29 @@ bind M set -g mouse off \; display "Mouse: Off"
 # copy mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# manualy reload setting
 bind r source-file ~/.tmux.conf \; display "config file loaded."
+
+# new window extends current path
+bind-key c new-window -c '#{pane_current_path}'
+# confirm on close window
+bind-key k confirm kill-window
+
+# auto-switch to available sessions
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t"$(tmux display-message -p "#S")"|| tmux kill-session'
 
 # window starts from 1, 0 is too far
 set-option -g base-index 1
 setw -g pane-base-index 1
 setw -g base-index 1
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
 
 # monitor settings
 setw -g monitor-activity on
