--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-name
 unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+# Copy to clipboard via mouse
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 # manualy reload setting
 bind r source-file ~/.tmux.conf \; display "config file loaded."
 
