--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,12 @@ unbind h
 bind k kill-pane
 bind h split-window -h
 bind v split-window -v
+
+bind -n C-j select-pane -L
+bind -n C-k select-pane -R
+bind -n C-h previous-window
+bind -n C-l next-window
+
 # mouse mode
 set -g mouse on
 bind m set -g mouse on \; display "Mouse: On"
