--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namesp
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # manualy reload setting
-bind r source-file ~/.tmux.conf \; display "config file loaded."
+bind R source-file ~/.tmux.conf \; display "INFO: Tmux config file reloaded!"
 
 # new window extends current path
 bind-key c new-window -c '#{pane_current_path}'
