--- a/tmux.conf
+++ b/tmux.conf
@@ -61,12 +61,20 @@ set -g visual-activity on
 # continuum setting
 set -g @continuum-restore 'on'
 
+# Theme Color Scheme
+# solarized color setting
+set -g @colors-solarized 'dark'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Theme Color Scheme
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
