--- a/tmux.conf
+++ b/tmux.conf
@@ -70,6 +70,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'Morantron/tmux-fingers'
 
 # Theme Color Scheme
 # set -g @plugin 'odedlaz/tmux-onedark-theme'
