fix(tmux): tweak navigation shortcuts

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,12 +10,11 @@ unbind C-b
 # keyshorts
 unbind x
 unbind h
-bind k kill-pane
 bind h split-window -h
 bind v split-window -v
 
-bind -n C-j select-pane -L
-bind -n C-k select-pane -R
+# Navigation
+bind -n C-\ select-pane -l
 bind -n C-h previous-window
 bind -n C-l next-window
 
@@ -42,7 +41,7 @@ bind R source-file ~/.tmux.conf \; display "INFO: Tmux config file reloaded!"
 # new window extends current path
 bind-key c new-window -c '#{pane_current_path}'
 # confirm on close window
-bind-key k confirm kill-window
+bind-key x confirm kill-pane
 
 # auto-switch to available sessions
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t"$(tmux display-message -p "#S")"|| tmux kill-session'
