fix(tmux): theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,7 +62,13 @@ set -g @continuum-restore 'on'
 
 # Theme Color Scheme
 # solarized color setting
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
+# Theme pack
+# set -g @themepack 'basic' (default)
+set -g @themepack 'powerline/block/yellow'
+# set -g @themepack 'powerline/block/cyan'
+# set -g @themepack 'powerline/default/gray'
+# set -g @themepack 'powerline/double/magenta'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -74,8 +80,9 @@ set -g @plugin 'Morantron/tmux-fingers'
 
 # Theme Color Scheme
 # set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'jimeh/tmux-themepack'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
