fix(tmux): solve the conflict shortcut for navigation window between tmux and vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,8 +15,8 @@ bind v split-window -v
 
 # Navigation
 bind -n C-\ select-pane -l
-bind -n C-h previous-window
-bind -n C-l next-window
+bind -n M-h previous-window
+bind -n M-l next-window
 
 # mouse mode
 set -g mouse on
